--- a/.drone.yml
+++ b/.drone.yml
@@ -7,9 +7,13 @@ clone:
 pipeline:
   build:
     image: python:2.7.13
+    environment:
+      - LC_ALL=en_US.UTF-8
+      - LANG=en_US.UTF-8
+      - LANGUAGE=en_US.UTF-8
     commands:
+      - locale-gen zh_TW zh_TW.UTF-8 zh_CN.UTF-8 en_US.UTF-8
       - pip install "sphinx==1.2.3"
       - pip install "sphinxcontrib-phpdomain==0.1.3.post1"
       - make pygments
       - make html
-      - cat build/html/changelog.html
