--- a/.drone.yml
+++ b/.drone.yml
@@ -12,6 +12,8 @@ pipeline:
       - LANG=en_US.UTF-8
       - LANGUAGE=en_US.UTF-8
     commands:
+      - apt-get clean && apt-get -y update
+      - apt-get install -y locales
       - locale-gen zh_TW zh_TW.UTF-8 zh_CN.UTF-8 en_US.UTF-8
       - pip install "sphinx==1.2.3"
       - pip install "sphinxcontrib-phpdomain==0.1.3.post1"
