--- a/.drone.yml
+++ b/.drone.yml
@@ -15,9 +15,8 @@ pipeline:
       - apt-get clean && apt-get -y update
       - apt-get install -y locales
       - locale-gen zh_TW zh_TW.UTF-8 zh_CN.UTF-8 en_US.UTF-8
-      - export LC_ALL=zh_TW.UTF-8
-      - export LANG=zh_TW.UTF-8
-      - export LANGUAGE=zh_TW.UTF-8
+      - dpkg-reconfigure locales
+      - update-locale LANG="zh_TW.UTF-8" LANGUAGE="zh_TW"
       - pip install "sphinx==1.2.3"
       - pip install "sphinxcontrib-phpdomain==0.1.3.post1"
       - make pygments
