--- a/.drone.yml
+++ b/.drone.yml
@@ -12,10 +12,12 @@ pipeline:
       - LANG=en_US.UTF-8
       - LANGUAGE=en_US.UTF-8
     commands:
-      - apt-get clean && apt-get -y update
-      - apt-get install -y locales
+      - apt-get -qq update && apt-get -qqy install locales
+      - sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen
+      - sed -i -e 's/# zh_TW.UTF-8 UTF-8/zh_TW.UTF-8 UTF-8/' /etc/locale.gen
       - locale-gen zh_TW zh_TW.UTF-8 zh_CN.UTF-8 en_US.UTF-8
-      - localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
+      - dpkg-reconfigure --frontend=noninteractive locales
+      - export LANG=en_US.UTF-8
       - pip install "sphinx==1.2.3"
       - pip install "sphinxcontrib-phpdomain==0.1.3.post1"
       - make pygments
