--- a/.drone.yml
+++ b/.drone.yml
@@ -18,6 +18,7 @@ pipeline:
       - locale-gen zh_TW zh_TW.UTF-8 zh_CN.UTF-8 en_US.UTF-8
       - dpkg-reconfigure --frontend=noninteractive locales
       - export LANG=en_US.UTF-8
+      - locale
       - pip install "sphinx==1.2.3"
       - pip install "sphinxcontrib-phpdomain==0.1.3.post1"
       - make pygments
