--- a/.drone.yml
+++ b/.drone.yml
@@ -17,7 +17,7 @@ pipeline:
       - sed -i -e 's/# zh_TW.UTF-8 UTF-8/zh_TW.UTF-8 UTF-8/' /etc/locale.gen
       - locale-gen zh_TW zh_TW.UTF-8 zh_CN.UTF-8 en_US.UTF-8
       - dpkg-reconfigure --frontend=noninteractive locales
-      - export LANG=en_US.UTF-8
+      - export LANG=zh_TW.UTF-8
       - locale
       - pip install "sphinx==1.2.3"
       - pip install "sphinxcontrib-phpdomain==0.1.3.post1"
