--- a/.drone.yml
+++ b/.drone.yml
@@ -8,16 +8,18 @@ pipeline:
   build:
     image: python:2.7.13
     environment:
-      - LC_ALL=en_US.UTF-8
-      - LANG=en_US.UTF-8
-      - LANGUAGE=en_US.UTF-8
+      - LC_ALL=zh_TW.UTF-8
+      - LANG=zh_TW.UTF-8
+      - LANGUAGE=zh_TW.UTF-8
     commands:
       - apt-get -qq update && apt-get -qqy install locales
       #- sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen
       - sed -i -e 's/# zh_TW.UTF-8 UTF-8/zh_TW.UTF-8 UTF-8/' /etc/locale.gen
-      #- locale-gen zh_TW zh_TW.UTF-8 zh_CN.UTF-8 en_US.UTF-8
+      - locale-gen zh_TW zh_TW.UTF-8 zh_CN.UTF-8 en_US.UTF-8
       - dpkg-reconfigure --frontend=noninteractive locales
       - export LANG=zh_TW.UTF-8
+      - export LC_ALL=zh_TW.UTF-8
+      - export LANGUAGE=zh_TW.UTF-8
       - locale
       - pip install "sphinx==1.2.3"
       - pip install "sphinxcontrib-phpdomain==0.1.3.post1"
