--- a/.drone.yml
+++ b/.drone.yml
@@ -6,9 +6,8 @@ clone:
 
 pipeline:
   build:
-    image: python:2.7.13
+    image: appleboy/codeigniter-docs
+    pull: true
     commands:
-      - pip install "sphinx==1.2.3"
-      - pip install "sphinxcontrib-phpdomain==0.1.3.post1"
       - make pygments
       - make html
